# cvscourse

./: .gitignore  CMakeLists.txt  README.md
ha1/: CMakeLists.txt
ha1/src/: ha1.cpp
ha2/: CMakeLists.txt  calculate.cpp  mainwindow.cpp  mainwindow.h
ha4/: CMakeLists.txt  calculate.cpp  mainwindow.cpp  mainwindow.h
ha5/: CMakeLists.txt  calculate.cpp  mainwindow.cpp  mainwindow.h  mask.cpp  mask.h
ha7/: CMakeLists.txt  calculate.cpp  features.cpp  features.h  mainwindow.cpp  mainwindow.h  mask.cpp  mask.h  track.cpp
ha8/: CMakeLists.txt  calculate.cpp  features.cpp  features.h  mainwindow.cpp  mainwindow.h  mask.cpp  model.cpp  model.h
